force-app/main/default/objects/Related_Account_from_Org1__c/Related_Account_from_Org1__c.object-meta.xml
<CustomObject>
    <label>Related Account from Org1</label>
    <nameField>
        <label>Account Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Related Accounts from Org1</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>