force-app/main/default/objects/Related_Account_from_Org1__c/fields/Account_Id__c.field-meta.xml
<CustomField>
    <fullName>Account_Id__c</fullName>
    <label>Account Id</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Related Accounts from Org1</relationshipLabel>
    <relationshipName>Related_Accounts_from_Org1</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>