force-app/main/default/objects/Related_Account_from_Org1__c/fields/Account_Website__c.field-meta.xml
<CustomField>
    <fullName>Account_Website__c</fullName>
    <label>Account Website</label>
    <type>Url</type>
</CustomField>