force-app/main/default/objects/Related_Account_from_Org1__c/fields/External_Account_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Account_Id__c</fullName>
    <externalId>true</externalId>
    <label>External Account Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>